CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(DEPENDENCIES_DIR CACHE PATH "")

# hint to find qt in dependencies path
FILE(GLOB_RECURSE QT5_FIND_MODULE ${DEPENDENCIES_DIR}/qt5.git/qtbase/bin/qmake.exe)
GET_FILENAME_COMPONENT(QT5_FIND_MODULE ${QT5_FIND_MODULE} DIRECTORY)
GET_FILENAME_COMPONENT(QT5_FIND_MODULE ${QT5_FIND_MODULE} DIRECTORY)
LIST(APPEND CMAKE_PREFIX_PATH ${QT5_FIND_MODULE}/lib/cmake)

ADD_SUBDIRECTORY(src)